--- a/app.html
+++ b/app.html
@@ -1,4 +1,9 @@
+<!DOCTYPE HTML>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  </head>
   <body>
     <main id="container"></main>
   </body>
